2007-05-11  Jorn Baayen  <jorn@openedhand.com>

	* AUTHORS: Added Zeeshan.

2007-05-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (on_ssdp_message),
	(on_use_filter_radiobutton_toggled), (get_ip_filter),
	(on_address_filter_dialog_response), (init_ui), (init_upnp):
	* tools/gssdp-device-sniffer.glade:

	- Correctly handle delete-event.
	- Fix initial size of the window. 
	- Add support for IP-filtering of packets.
	- Do active the resource-browser.
	- Add copyright header.

2007-05-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (append_device), (find_device),
	(update_device), (resource_available_cb), (remove_device),
	(resource_unavailable_cb), (create_packet_treemodel),
	(create_device_treemodel), (setup_treeview), (setup_treeviews),
	(init_upnp), (main):
	* tools/gssdp-device-sniffer.glade:
	
	- Remove unimplementable menu items and the associated callbacks.
	- Implement device view.
	- Deinit gssdp objects first rather than the UI.
	- Some minor fixes.

2007-05-10  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* README:

	Added some text.

2007-05-10  Jorn Baayen  <jorn@openedhand.com>

	* Makefile.am:

	Do not install uninstalled PC file.

2007-05-09  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (resource_available):

	Disable support for Expires header for now as correct RFC 1123 parsing
	is a pain.

2007-05-08  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* tools/gssdp-device-sniffer.c: (clear_packet_treeview),
 	(packet_header_to_string), (clear_textbuffer),
 	(update_packet_details), (display_packet), (on_packet_selected),
 	(on_clear_packet_capture_activate), (packet_to_treeview_data),
 	(append_packet), (on_ssdp_message), (create_model),
 	(setup_treeviews), (init_upnp):
 	
 	- Implement packet details viewing.
 	- Browsing passively.
 	- Rename on_gssdp_message to on_ssdp_message
 	- Implement clearing of packet info treeview and textview.