@@ -1,3 +1,11 @@
+2007-05-15  Jorn Baayen  <jorn@openedhand.com>
+
+	* tools/gssdp-device-sniffer.c: (packet_to_treeview_data),
+	(on_ssdp_message):
+	* tools/gssdp-device-sniffer.glade:
+
+	Updates by Zeeshan.
+
 2007-05-11  Jorn Baayen  <jorn@openedhand.com>
 
 	* AUTHORS: Added Zeeshan.
